# swiftide-docker-executor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.tests  Justfile  README.md  build.rs  coverage.yml  deny.toml  kwaak.toml  release-plz.toml  typos.toml
.github/workflows/: coverage.yml  release-docker.yml  release-plz.yml  tests.yml
proto/: shell.proto
src/: client.rs  context_builder.rs  docker_tool_executor.rs  errors.rs  lib.rs  main.rs  running_docker_executor.rs  tests.rs
swiftide-docker-executor/: Cargo.toml  Dockerfile  Dockerfile.alpine.tests  Dockerfile.entrypoint.tests  Dockerfile.tests  build.rs
swiftide-docker-executor/proto/: loader.proto  shell.proto
swiftide-docker-executor/src/: client.rs  container_configurator.rs  container_starter.rs  context_builder.rs  docker_tool_executor.rs  dockerfile_manager.rs  dockerfile_mangler.rs  errors.rs  file_loader.rs  image_builder.rs  lib.rs  running_docker_executor.rs  tests.rs
swiftide-docker-executor/src/snapshots/: swiftide_docker_executor__dockerfile_mangler__tests__mangle.snap  swiftide_docker_executor__dockerfile_mangler__tests__mangle_with_multiple_forms_and_other_lines.snap  swiftide_docker_executor__dockerfile_mangler__tests__remove_cmd_entrypoint.snap  swiftide_docker_executor__dockerfile_mangler__tests__remove_cmd_entrypoint_case_insensitive.snap
swiftide-docker-service/: Cargo.toml  Dockerfile  build.rs
swiftide-docker-service/proto/: shell.proto
swiftide-docker-service/src/: executor.rs  grpc_service.rs  loader.rs  main.rs
