[workspace]
members = ["swiftide-docker*"]
resolver = "2"

[workspace.dependencies]
tonic = { version = "0.13" }
prost = "0.13"
tonic-build = "0.13"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
swiftide-core = "0.31"
swiftide-indexing = "0.31"
futures-util = "0.3"

[workspace.package]
description = "A docker executor for swiftide agent tools"
license = "MIT"
readme = "README.md"
keywords = ["llm", "rag", "ai", "data", "openai"]
homepage = "https://github.com/bosun-ai/swiftide"
repository = "https://github.com/bosun-ai/swiftide-docker-executor"
edition = "2024"
build = "build.rs"
version = "0.12.3"
categories = ["asynchronous"]

[patch.crates-io]
# swiftide-core = { git = "https://github.com/bosun-ai/swiftide", features = [
# ], package = "swiftide-core", branch = "feat/generic-indexing" }
# swiftide-indexing = { git = "https://github.com/bosun-ai/swiftide", features = [
# ], package = "swiftide-indexing", branch = "feat/generic-indexing" }
