[workspace]
members = ["swiftide-docker*"]
resolver = "2"

[workspace.dependencies]
tonic = { version = "0.14" }
prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
swiftide-core = "0.32"
swiftide-indexing = "0.32"
futures-util = "0.3"

[workspace.package]
description = "A docker executor for swiftide agent tools"
license = "MIT"
readme = "README.md"
keywords = ["llm", "rag", "ai", "data", "openai"]
homepage = "https://github.com/bosun-ai/swiftide"
repository = "https://github.com/bosun-ai/swiftide-docker-executor"
edition = "2024"
build = "build.rs"
version = "0.13.4"
categories = ["asynchronous"]

[patch.crates-io]
# swiftide-core = { git = "https://github.com/bosun-ai/swiftide", package = "swiftide-core", branch = "master" }
# swiftide-indexing = { git = "https://github.com/bosun-ai/swiftide", package = "swiftide-indexing", branch = "master" }
# swiftide-agents = { git = "https://github.com/bosun-ai/swiftide", package = "swiftide-agents", branch = "master" }
