[package]
name = "swiftide-docker-executor"
build = "build.rs"
repository.workspace = true
edition.workspace = true
homepage.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
swiftide-core = "0.18"

bollard = { version = "0.18" }
thiserror = "2.0"
async-trait = "0.1"
ignore = "0.4"
walkdir = "2.5"
tokio-tar = "0.3"
uuid = { version = "1.12", features = ["v4"] }
tracing = "0.1"
indoc = "2.0"
anyhow = "1.0"
dirs = "6.0"
tempfile = "3.15"
http-body-util = "0.1.2"
flate2 = "1.0"
tokio.workspace = true

tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build = { workspace = true }


[dev-dependencies]
swiftide-agents = "0.18"
test-log = { version = "0.2", features = ["trace"] }
insta = { version = "1.42.1", features = ["filters"] }
pretty_assertions = "1.4"
