[package]
name = "swiftide-docker-executor"
build = "build.rs"
include = ["proto", "src/**", "Cargo.toml", "build.rs"]
repository.workspace = true
edition.workspace = true
homepage.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
swiftide-core.workspace = true

bollard = { version = "0.19.2" }
thiserror = "2.0"
async-trait = "0.1"
ignore = "0.4"
walkdir = "2.5"
tokio-tar = "0.3"
tokio-util = "0.7.16"
uuid = { version = "1.12", features = ["v4"] }
tracing.workspace = true
indoc = "2.0"
anyhow = "1.0"
dirs = "6.0"
tempfile = "3.19"
http-body-util = "0.1.2"
flate2 = "1.1"
tokio.workspace = true
tokio-stream = "0.1.17"
fs-err = { version = "3.1.0", features = ["tokio"] }
futures-util = "0.3"

tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build = { workspace = true }


[dev-dependencies]
swiftide-agents = "0.31"
test-log = { version = "0.2", features = ["trace"] }
insta = { version = "1.42.1", features = ["filters"] }
pretty_assertions = "1.4"

[features]
default = []
buildkit = ["bollard/buildkit"]
