[package]
name = "swiftide-docker-service"
build = "build.rs"
publish = false
repository.workspace = true
edition.workspace = true
homepage.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3" }
futures-util.workspace = true

swiftide-indexing = { workspace = true, optional = true }
swiftide-core = { workspace = true, optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = ["file-loader"]
file-loader = ["dep:swiftide-indexing", "dep:swiftide-core"]
